these should fix the learn more button issue and make it so the form in the header doesn't fade out on mobile devices

--- a/_code/_promo/_assets/stylesheets/header.scss
+++ b/_code/_promo/_assets/stylesheets/header.scss
@@ -68,7 +68,7 @@ a[role=top-nav] {
 }
 
 .for-festivals {
-  > header { background-image: url('/_assets/images/festival-home-bg.jpg');}
+  > div > header { background-image: url('/_assets/images/festival-home-bg.jpg');}
 
   .m-pitch {
     @media screen and (min-width: $bp) {
